# square-eater

./: Brick.cpp  Brick.h  BricksSpawner.cpp  BricksSpawner.h  CMakeLists.txt  LICENSE.md  MovableRectangle.cpp  MovableRectangle.h  README.md  main.cpp
